i delete the value attribute

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,10 +19,10 @@
 
                         <form class="login-form" action="/api/login" method="post">
                             <div class="form-group">
-                                <input type="text" name="userName" class="form-control rounded-left {{inpErr}}" placeholder="Username" value="56651363" required>
+                                <input type="text" name="userName" class="form-control rounded-left {{inpErr}}" placeholder="Username" required>
                             </div>
                             <div class="form-group d-flex">
-                                <input type="password" name="password" class="form-control rounded-left {{inpErr}}" placeholder="Password" value="aaaa" required>
+                                <input type="password" name="password" class="form-control rounded-left {{inpErr}}" placeholder="Password" required>
                             </div>
 
                             {{#if err}}
