--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -32,19 +32,19 @@
 						<form action="/add" method="post" class="signup-form">
 							<div class="form-group mb-4">
 								<label class="label" for="name">Full Name</label>
-								<input type="text" name="name" class="form-control" value="John Doe" required>
+								<input type="text" name="name" class="form-control" required>
 							</div>
 							<div class="form-group mb-4">
 								<label class="label" for="email">Email Address</label>
-								<input type="text" class="form-control" name="email" value="johndoe@gmail.com" required>
+								<input type="text" class="form-control" name="email" required>
 							</div>
 							<div class="form-group mb-4">
 								<label class="label" for="password">Password</label>
-								<input type="password" class="form-control" placeholder="Password" name="password" value="houssemeddine" required>
+								<input type="password" class="form-control" placeholder="Password" name="password" required>
 							</div>
 							<div class="form-group mb-4">
 								<label class="label" for="password">Confirm Password</label>
-								<input type="password" class="form-control" placeholder="Confirm Password" name="rePassword" value="houssemeddine" required>
+								<input type="password" class="form-control" placeholder="Confirm Password" name="rePassword" required>
 							</div>
 							<div class="form-group">
 								<button type="submit" class="btn btn-primary rounded submit p-3">Sign Up</button>
