I fix the show of the page signup even if he is logged

--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -29,7 +29,7 @@
 					<div class="wrap d-md-flex">
 						<div style="width: 100%;padding: 10px 30px">
 			      			<h3 class="mb-4">Hello! <span>Please signup to continue</span></h3>
-						<form action="/add" method="post" class="signup-form">
+						<form action="/api/signup" method="post" class="signup-form">
 							<div class="form-group mb-4">
 								<label class="label" for="name">Full Name</label>
 								<input type="text" name="name" class="form-control" required>
