--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -45,7 +45,7 @@
                                     </label>
                                 </div>
                                 <div class="w-50 text-md-right">
-                                    <a href="/signUp">Sign Up ?</a>
+                                    <a href="/signup">Sign Up ?</a>
                                 </div>
                             </div>
                             <div class="form-group">
